@@ -1,4 +1,5 @@
 Development
+    Hide media lable when running as plugin
     Fix bug in dbus open method
     Detect <smil> files are playlists, but don't parse them
     Fix drag and drop, so that when playlist is not visible items dropped on start playing
